2003-03-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c: Added -list resource support.

2003-03-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/Makefile.am (random.c): Removed building, packaging,
	and intialization of random.c functions since it is not actually
	used.
	* magick/semaphore.c (InitializeSemaphore): Only initialize
	critical section if active_semaphore is not already true.
	* magick/resource.c: Snarf resource.c updates from ImageMagick.
	* PerlMagick/Magick.xs: Added missing log event types.
	* magick/log.h (enum): Added ResourceEvent enumeration.
	* magick/log.c (LogMagickEvent): fflush(stdout) at the end of
	each log.  Otherwise output may not be seen for a long time.
	(SetLogEventMask): Add support for "-debug resource".
	* coders/tiff.c (RegisterTIFFImage): Don't register encode and
	decode handlers for TIFF if TIFF library is not available.
	* magick/constitute.c (WriteImage): Fix cut-n-paste error
	in log message ("decoder" --> "encoder").

2003-03-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* index.html: Added a link to the GraphicsMagick mailing lists.
	* Magick++/demo/zoom.cpp: Added dashed option support, including
	a -resample option for image resampling.

2003-03-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (DIST_SUBDIRS): Filters subdirectory needs to
	be distributed.

2003-03-14  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
	* magick/render.c Ported Cristy's bugfix to DrawAffineImage().

2003-03-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (DestroyImage): Comment out new assertions until
	we are certain that there are no ill effects.
	* coders/mat.c (ReadMATImage): Set image->depth to valid values.
	* PerlMagick/Magick.xs: Update so that new DestroyImage assertions
 	aren't asserted.
	* magick/list.c (DestroyImageList): Update so that new DestroyImage
	assertions aren't asserted.