@@ -1,3 +1,7 @@
+2003-03-17  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
+
+	* magick/image.c Relocated misplaced break in ChannelImage()
+
 2003-03-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/command.c: Added -list resource support.
